--- a/src/Pages/CSS/ShopCategory.css
+++ b/src/Pages/CSS/ShopCategory.css
@@ -12,7 +12,8 @@ width:82%;
 .shopcategory-sort{
     padding: 10px 20px;
     border-radius: 40px;
-    border:1px solid #888
+    border:1px solid #888;
+       
 }
 .shopcategory-indexSort p span{
     font-weight: 600;
